force-app/main/default/objects/Department__c/fields/Department_capacity__c.field-meta.xml
<CustomField>
    <fullName>Department_capacity__c</fullName>
    <label>Department capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>