force-app/main/default/objects/Department__c/fields/Emp_Count__c.field-meta.xml
<CustomField>
    <fullName>Emp_Count__c</fullName>
    <label>Emp Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>